Bug#21370: View renaming lacks tablename_to_filename encoding   Problem: renaming of FRM file and ARC files didn't use file name   encoding, so RENAME TABLE for views failed for views having   "tricky" characters in their names.   Fix: adding build_table_filename() in missing places.